--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       </div>
 
       <div class="prompt-box">
+        <button id="cmdlimpiar">Limpiar</button>
         <button id="ejecutarFuncion" type="submit">Go</button>
         <button id="cmdgrabaregcontacti">Grabar</button>
       </div>
@@ -42,7 +43,7 @@
     </form>
 
     <div class="prompt-box">
-      <p class="output">(Resultado Registro Whp Form...)</p>
+      <p id="idresout" class="output">(Resultado Registro Whp Form...)</p>
     </div>
     <div class="prompt-box">
       <p id="idjsondata" class="output"></p>
